[project]
name = "icassp2026"
version = "0.1.0"
description = ""
authors = [
    {name = "jaehwan",email = "jhwan98@postech.ac.kr"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "lightning (>=2.5.2,<3.0.0)",
    "omegaconf (>=2.3.0,<3.0.0)",
    "transformers (>=4.52.4,<5.0.0)",
    "tensorboard (>=2.19.0,<3.0.0)"
]

[tool.poetry]
package-mode = false # do not install current project

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
